# scstudio

./: CMakeLists.txt  CTestConfig.cmake  FindExcel.cmake  FindLpSolve.cmake  FindPCAP.cmake  README  clean.sh  setup.py
doc/: CMakeLists.txt  beautify.tex  instance_sequencer.tex  memb_alg.tex
doc/doxygen/: doxy.footer.html  doxygen.config  how_to_make_new_doxy.txt
doc/help/: CMakeLists.txt  help.css  hhc.cmake  index.html  scstudio.hhc  scstudio.hhp
src/: CMakeLists.txt  config.h.in
src/check/: CMakeLists.txt
src/data/: CMakeLists.txt  checker.h  configurator.h  dfs_area_traverser.cpp  dfs_area_traverser.h  dfs_bmsc_graph_traverser.cpp  dfs_bmsc_graph_traverser.h  dfs_events_traverser.cpp  dfs_events_traverser.h  dfs_hmsc_flat_traverser.cpp  dfs_hmsc_flat_traverser.h  dfs_hmsc_traverser.cpp  dfs_hmsc_traverser.h  dfs_inner_hmsc_traverser.cpp  dfs_inner_hmsc_traverser.h  dfs_instance_events_traverser.cpp  dfs_instance_events_traverser.h  dfs_refnode_hmsc_traverser.cpp  dfs_refnode_hmsc_traverser.h  dfsb_hmsc_traverser.cpp  dfsb_hmsc_traverser.h  diacritics_build.py  elementary_cycles_traverser.cpp  elementary_cycles_traverser.h  export.h  fcmp.cpp  fcmp.h  formatter.h  hmsc_reference_checker.h  msc.cpp  msc.h  msc_modifications.h  msc_types.cpp  msc_types.h  node_finder.cpp  node_finder.h  prerequisite_check.h  reporter.h  searcher.h  session_attribute.cpp  (+6 more)
src/membership/: CMakeLists.txt  diff_impl.cpp  diff_impl.h  export.h  membership_additional.cpp  membership_additional.h  membership_alg.cpp  membership_alg.h  membership_base.h  membership_time.cpp  membership_time.h  module.cpp
src/montecarlo/: CMakeLists.txt  export.h  module.cpp  montecarlo.cpp  montecarlo.h
tests/: CMakeLists.txt  acyclic_checker_test.cpp  bmsc_matrix_converter_test.cpp  bmsc_tightening_test.cpp  checker_diff.py  checker_test.cpp  constrain_check_test.cpp  deadlock_checker_test.cpp  decimal_test.cpp  dot_writer.h  engmann_test.cpp  engmann_test01.cfi  fifo_checker_test.cpp  find_block_test.cpp  hmsc_all_paths_test.cpp  incon_test.cpp  interval_set_test.cpp  interval_string.cpp  interval_test.cpp  livelock_checker_test.cpp  local_choice_checker_test.cpp  max_tightener_test.cpp  py_convert_test.cpp  py_test.cpp  race_checker_test.cpp  tighten_hmsc_test.cpp  tighten_msc_test.cpp  universal_boundedness_checker_test.cpp
tests/acyclic/: CMakeLists.txt  acyclic1.mpr  acyclic1.vsd  acyclic2.mpr  acyclic2.vsd  acyclic3.mpr  acyclic3.vsd  acyclic4.mpr  acyclic4.vsd  acyclic5.mpr  acyclic5.vsd  acyclic6.mpr  acyclic6.vsd  cyclic1.mpr  cyclic1.mpr.result  cyclic1.vsd  cyclic2.mpr  cyclic2.mpr.result  cyclic2.vsd  cyclic3.mpr  cyclic3.mpr.result  cyclic3.vsd  cyclic4.mpr  cyclic4.mpr.result  cyclic4.vsd
tests/deadlock/: CMakeLists.txt  deadlock1.mpr  deadlock1.vsd  deadlock2.mpr  deadlock2.vsd  deadlock3.mpr  deadlock3.vsd  deadlock4.mpr  deadlock4.mpr.result  deadlock4.vsd  deadlock5.mpr  deadlock5.mpr.result  deadlock5.vsd  nodeadlock1.mpr  nodeadlock1.vsd  nodeadlock10.mpr  nodeadlock10.vsd  nodeadlock11.mpr  nodeadlock11.vsd  nodeadlock2.mpr  nodeadlock2.vsd  nodeadlock3.mpr  nodeadlock3.vsd  nodeadlock4.mpr  nodeadlock4.vsd  nodeadlock5.mpr  nodeadlock5.vsd  nodeadlock6.mpr  nodeadlock6.vsd  nodeadlock7.mpr  nodeadlock7.vsd  nodeadlock8.mpr  nodeadlock8.vsd  nodeadlock9.mpr  nodeadlock9.vsd
tests/diff/: CMakeLists.txt  diff_diff.py  diff_test.cpp  flow01.mpr  flow01.mpr.result  flow02_1.mpr  flow02_1.mpr.result  flow02_2.mpr  flow02_2.mpr.result  flow02_2.vsd  flow02_3.mpr  flow02_3.mpr.result  flow02_4.mpr  flow02_4.mpr.result  flow02_5.mpr  flow02_5.mpr.result  flow02_5.vsd  flow02_6.mpr  flow02_6.mpr.result  flow02_6.vsd  flow02_7.mpr  flow02_7.mpr.result  flow02_7.vsd  flow03_1.mpr  flow03_1.mpr.result  flow03_1.vsd  flow03_2.mpr  flow03_2.mpr.result  flow03_2.vsd  flow04_1.mpr  flow04_1.mpr.result  flow04_1.vsd  flow04_2.mpr  flow04_2.mpr.result  flow04_2.vsd  flow04_3.mpr  flow04_3.mpr.result  flow04_3.vsd  flow04_4.mpr  flow04_4.mpr.result  (+35 more)
tests/fifo/: CMakeLists.txt  fifo1.mpr  fifo1.vsd  fifo2.mpr  fifo2.vsd  fifo3.mpr  fifo3.vsd  fifo4.mpr  fifo4.vsd  fifo5.mpr  fifo5.vsd  fifo6.mpr  fifo6.vsd  fifo7.mpr  fifo7.vsd  nonfifo1.mpr  nonfifo1.mpr.result  nonfifo1.vsd  nonfifo2.mpr  nonfifo2.mpr.result  nonfifo2.vsd
tests/local_choice/: CMakeLists.txt  hard1_nonlocal.mpr  hard1_nonlocal.mpr.result  hard1_nonlocal.vsd  hard2_nonlocal.mpr  hard2_nonlocal.vsd  hard3_local.mpr  hard3_local.vsd  medium1_nonlocal.mpr  medium1_nonlocal.mpr.result  medium1_nonlocal.vsd  medium2_nonlocal.mpr  medium2_nonlocal.vsd  medium3_local.mpr  medium3_local.vsd  simple2_nonlocal.mpr  simple2_nonlocal.mpr.result  simple2_nonlocal.vsd  simple3_nonlocal.mpr  simple3_nonlocal.mpr.result  simple3_nonlocal.vsd  simple_local.mpr  simple_local.vsd  simple_nonlocal.mpr  simple_nonlocal.mpr.result  simple_nonlocal.vsd
tests/membership/: CMakeLists.txt  absolut_time_bmsc02_1.mpr  absolut_time_bmsc02_2.mpr  absolut_time_hmsc01.mpr  absolut_time_hmsc02.mpr  complete.mpr  complete.vsd  complete1.mpr  complete_pat1.mpr  complete_pat1.vsd  complete_pat2.mpr  complete_pat2.vsd  complete_pat3.mpr  complete_pat3.vsd  complete_pat4.mpr  complete_pat4.vsd  complete_pat5.mpr  coregion_minimal.mpr  coregion_minimal.vsd  coregion_minimal_pat1.mpr  coregion_minimal_pat1.vsd  coregion_minimal_pat2.mpr  coregion_minimal_pat2.vsd  coregion_minimal_pat3.mpr  coregion_minimal_pat3.vsd  coregion_minimal_pat4.mpr  coregion_minimal_pat4.vsd  coregion_minimal_pat5.mpr  coregion_minimal_pat5.vsd  coregion_minimal_pat6.mpr  coregion_minimal_pat6.vsd  coregion_minimal_pat7.mpr  coregion_minimal_pat7.vsd  coregion_minimal_pat8.mpr  coregion_minimal_pat8.vsd  cycleWithEmpty_neg_hmsc.mpr  cycleWithEmpty_neg_hmsc.vsd  cycleWithEmpty_neg_pat.mpr  cycleWithEmpty_neg_pat.vsd  cycleWithEmpty_pos_hmsc.mpr  (+188 more)
tests/montecarlo/: CMakeLists.txt  montecarlo_test.cpp  test_cycle_bmsc.mpr  test_simple_bmsc.mpr  test_simple_hmsc.mpr  test_simple_hmsc.vsd
tests/python/: repr_acyclic.py  repr_acyclic2.py  repr_deadlock.py  repr_deadlock2.py  repr_fifo.py  (+3 more)
(+1070 files in other folders)
