FIND_PACKAGE(PythonInterp REQUIRED)

ADD_EXECUTABLE(z120_test
  z120_test.cpp
)
TARGET_LINK_LIBRARIES(z120_test
  scZ120
)

ADD_Z120_TEST(z120_test00.mpr 1)
ADD_Z120_TEST(z120_test01.mpr 1)
ADD_Z120_TEST(z120_test02.mpr 1)
ADD_Z120_TEST(z120_test03.mpr 1)
ADD_Z120_TEST(z120_test04.mpr 1)
ADD_Z120_TEST(z120_test05.mpr 1)
ADD_Z120_TEST(z120_test06.mpr 1)
ADD_Z120_TEST(z120_test07.mpr 1)
ADD_Z120_TEST(z120_test08.mpr 1)
ADD_Z120_TEST(z120_test09.mpr 1)
ADD_Z120_TEST(z120_test10.mpr 1)
ADD_Z120_TEST(z120_test11.mpr 1)
ADD_Z120_TEST(z120_test12.mpr 1)
ADD_Z120_TEST(z120_test13.mpr 1)
ADD_Z120_TEST(z120_test14.mpr 1)
ADD_Z120_TEST(z120_test15.mpr 1)
ADD_Z120_TEST(z120_test16.mpr 1)
ADD_Z120_TEST(z120_test17.mpr 1)
ADD_Z120_TEST(z120_test18.mpr 1)
ADD_Z120_TEST(z120_test19.mpr 1)
ADD_Z120_TEST(z120_test20.mpr 1)
ADD_Z120_TEST(z120_test21.mpr 1)
ADD_Z120_TEST(z120_test22.mpr 1)
ADD_Z120_TEST(z120_test23.mpr 1)
ADD_Z120_TEST(z120_test24.mpr 1)
ADD_Z120_TEST(z120_test25.mpr 1)
ADD_Z120_TEST(z120_test26.mpr 1)
ADD_Z120_TEST(z120_test27.mpr 1)
ADD_Z120_TEST(z120_test28.mpr 1)
ADD_Z120_TEST(z120_test29.mpr 1)
ADD_Z120_TEST(z120_test30.mpr 1)
ADD_Z120_TEST(z120_test31.mpr 1)
ADD_Z120_TEST(z120_test32.mpr 1)
ADD_Z120_TEST(z120_test33.mpr 1)
ADD_Z120_TEST(z120_test34.mpr 1)
ADD_Z120_TEST(z120_test35.mpr 1)
ADD_Z120_TEST(z120_test36.mpr 1)
ADD_Z120_TEST(z120_test37.mpr 1)
ADD_Z120_TEST(z120_test38.mpr 1)
ADD_Z120_TEST(z120_test39.mpr 1)
ADD_Z120_TEST(z120_test40.mpr 1)
ADD_Z120_TEST(z120_test41.mpr 1)
ADD_Z120_TEST(z120_test42.mpr 1)
ADD_Z120_TEST(z120_test43.mpr 0)
ADD_Z120_TEST(z120_test44.mpr 0)
ADD_Z120_TEST(z120_test45.mpr 1)
ADD_Z120_TEST(z120_test46.mpr 0)
ADD_Z120_TEST(z120_test47.mpr 1)
ADD_Z120_TEST(z120_test48.mpr 0)
ADD_Z120_TEST(z120_test49.mpr 1)
ADD_Z120_TEST(z120_test50.mpr 1)
ADD_Z120_TEST(z120_test51.mpr 1)
ADD_Z120_TEST(z120_test52.mpr 1)
ADD_Z120_TEST(z120_test53.mpr 1)
ADD_Z120_TEST(z120_test54.mpr 1)
ADD_Z120_TEST(z120_test55.mpr 1)
ADD_Z120_TEST(z120_test56.mpr 1)
ADD_Z120_TEST(z120_test57.mpr 0)
ADD_Z120_TEST(z120_test58.mpr 1)
ADD_Z120_TEST(z120_test59.mpr 1)
ADD_Z120_TEST(z120_test60.mpr 1)
ADD_Z120_TEST(z120_test61.mpr 1)
ADD_Z120_TEST(z120_test62.mpr 1)
ADD_Z120_TEST(z120_test63.mpr 1)
ADD_Z120_TEST(z120_test64.mpr 1)
ADD_Z120_TEST(z120_test65.mpr 1)
ADD_Z120_TEST(z120_test66.mpr 1)
ADD_Z120_TEST(z120_test67.mpr 1)
ADD_Z120_TEST(z120_test68.mpr 1)
ADD_Z120_TEST(z120_test69.mpr 1)
ADD_Z120_TEST(z120_test70.mpr 1)
ADD_Z120_TEST(z120_test71.mpr 1)
ADD_Z120_TEST(z120_test72.mpr 1)
ADD_Z120_TEST(z120_test73.mpr 1)
ADD_Z120_TEST(z120_test74.mpr 1)
ADD_Z120_TEST(z120_test75.mpr 1)
ADD_Z120_TEST(z120_test76.mpr 1)
ADD_Z120_TEST(z120_test77.mpr 1)
ADD_Z120_TEST(z120_test78.mpr 1)
ADD_Z120_TEST(z120_test79.mpr 1)
ADD_Z120_TEST(z120_test80.mpr 1)
ADD_Z120_TEST(z120_test81.mpr 1)
ADD_Z120_TEST(z120_test82.mpr 1)
ADD_Z120_TEST(z120_test83.mpr 1)
ADD_Z120_TEST(z120_test84.mpr 1)
ADD_Z120_TEST(z120_test85.mpr 1)
ADD_Z120_TEST(z120_test86.mpr 1)
ADD_Z120_TEST(z120_test87.mpr 1)
ADD_Z120_TEST(z120_test88.mpr 1)
ADD_Z120_TEST(z120_test89.mpr 1)
ADD_Z120_TEST(z120_test90.mpr 1)
ADD_Z120_TEST(z120_test91.mpr 0)
ADD_Z120_TEST(z120_test92.mpr 1)
ADD_Z120_TEST(z120_test93.mpr 1)

ADD_Z120_TEST(z120_time01.mpr 1)
ADD_Z120_TEST(z120_time02.mpr 1)
ADD_Z120_TEST(z120_time03.mpr 1)
ADD_Z120_TEST(z120_time04.mpr 1)
ADD_Z120_TEST(z120_time05.mpr 1)
ADD_Z120_TEST(z120_time06.mpr 1)
ADD_Z120_TEST(z120_time07.mpr 1)
ADD_Z120_TEST(z120_time08.mpr 1)
ADD_Z120_TEST(z120_time09.mpr 1)
ADD_Z120_TEST(z120_time10.mpr 1)
ADD_Z120_TEST(z120_time11.mpr 1)
ADD_Z120_TEST(z120_time12.mpr 1)
ADD_Z120_TEST(z120_time13.mpr 1)
ADD_Z120_TEST(z120_time14.mpr 1)
ADD_Z120_TEST(z120_time15.mpr 1)
ADD_Z120_TEST(z120_time16.mpr 1)
ADD_Z120_TEST(z120_time17.mpr 1)
ADD_Z120_TEST(z120_time18.mpr 1)
ADD_Z120_TEST(z120_time19.mpr 1)
ADD_Z120_TEST(z120_time20.mpr 1)
ADD_Z120_TEST(z120_time21.mpr 1)
ADD_Z120_TEST(z120_time22.mpr 1)
ADD_Z120_TEST(z120_time23.mpr 1)
ADD_Z120_TEST(z120_time24.mpr 1)
ADD_Z120_TEST(z120_time25.mpr 1)
ADD_Z120_TEST(z120_time26.mpr 1)
ADD_Z120_TEST(z120_time27.mpr 1)
ADD_Z120_TEST(z120_time28.mpr 1)
ADD_Z120_TEST(z120_time29.mpr 1)
ADD_Z120_TEST(z120_time30.mpr 1)
ADD_Z120_TEST(z120_time31.mpr 1)
ADD_Z120_TEST(z120_time32.mpr 1)
ADD_Z120_TEST(z120_time33.mpr 1)
ADD_Z120_TEST(z120_time34.mpr 1)
ADD_Z120_TEST(z120_time35.mpr 1)
ADD_Z120_TEST(z120_time36.mpr 1)
ADD_Z120_TEST(z120_time37.mpr 1)
ADD_Z120_TEST(z120_time38.mpr 1)
ADD_Z120_TEST(z120_time39.mpr 1)
ADD_Z120_TEST(z120_time40.mpr 1)
ADD_Z120_TEST(z120_time41.mpr 1)
ADD_Z120_TEST(z120_time42.mpr 1)
ADD_Z120_TEST(z120_time43.mpr 1)
ADD_Z120_TEST(z120_time44.mpr 1)
ADD_Z120_TEST(z120_time45.mpr 1)
ADD_Z120_TEST(z120_time46.mpr 1)
ADD_Z120_TEST(z120_time47.mpr 1)
ADD_Z120_TEST(z120_time48.mpr 1)
ADD_Z120_TEST(z120_time49.mpr 1)


# $Id: CMakeLists.txt 1011 2010-12-09 18:10:21Z madzin $
